# yurback

./: .dockerignore  .env.template  .gitignore  LICENSE  README.md  dockerfile  pyproject.toml  start.sh
.github/workflows/: bump.yaml  deploy.yaml  deploy_old.yaml
alembic/: env.py
alembic/versions/: 2023_10_07_1503-8e79c6b2bde5_first_revision.py  2023_10_07_2116-7094fc7951e4_add_project_table.py  2023_10_13_2229-334f034f69e2_add_user_table.py  2023_10_14_1308-807be5c47b4d_add_disabled_field_to_user_table.py  2023_10_15_0101-3105846f4dbf_add_user_scopes.py  2023_10_19_1009-242ec8b54c4f_add_asset_table.py  2023_11_25_1226-7f1375646d8b_add_comming_soon_to_posts.py  2023_12_03_0003-744e7e0a3943_change_post_status_names.py
backend/: README.md  redocly.yaml
backend/openapi/: openapi.yaml
backend/openapi/components/examples/: Project.yaml
backend/openapi/components/parameters/: ID.yaml  Pagination.yaml
backend/openapi/components/requestBodies/: Project.yaml
backend/openapi/components/responses/: Error_400.yaml  Error_401.yaml  Error_404.yaml  Post.yaml  Project.yaml
backend/openapi/components/schemas/: Error.yaml  Post.yaml  Project.yaml
backend/openapi/paths/: posts.yaml  posts_{id}.yaml  projects.yaml  projects_{id}.yaml  uploads.yaml
backend/openapi/paths/posts/: get.yaml  post.yaml
backend/openapi/paths/projects/: get.yaml  post.yaml
openapi/: openapi.yaml
openapi/components/examples/: Error.yaml
openapi/components/parameters/: Limit.yaml  PostStatus.yaml  Skip.yaml
openapi/components/requestBodies/: Post.yaml  SignIn.yaml  SignUp.yaml
openapi/components/responses/: Authentication.yaml  Error.yaml  Error_401.yaml  Error_403.yaml  Error_422.yaml  Error_500.yaml  Post.yaml  Project.yaml
openapi/components/schemas/: Error.yaml  Post.yaml  Project.yaml  SignIn.yaml  SignUp.yaml
openapi/paths/assets/: post.yaml
openapi/paths/posts/: get.yaml  post.yaml
openapi/paths/projects/: get.yaml  post.yaml
src/: main.py
src/api/: __init__.py  routes.py
src/api/endpoints/: assets.py  auth.py  posts.py  projects.py
src/core/: config.py
src/core/auth/: __init__.py  deps.py  scope.py  scopes.py
src/core/errors/: base.py  handlers.py
src/crud/: __init__.py  asset.py  base.py  crud_post.py  post.py  project.py  user.py
src/database/: base.py  deps.py  session.py
src/lib/: storage.py
src/models/: asset.py  base.py  post.py  project.py  user.py
src/schemas/: __init__.py  asset.py  generics.py  post.py  project.py  user.py
terraform/: .terraform.lock.hcl  alb.tf  cdn.tf  ecs_cluster.tf  ecs_service.tf  ecs_task_definition.tf  main.tf  rds.tf  user_data.tftpl  variables.tf
tests/: conftest.py  test_auth.py  test_posts.py  test_projects.py
(+15 files in other folders)
