[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yurb", email = "yavurb@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.pdm.scripts]
start = "sh start.sh"
dev = "uvicorn src.main:app --host '0.0.0.0' {args:--port 8910} --reload"

# Alembic - migrations commands
db_revision = "alembic revision --autogenerate -m"
db_upgrade = "alembic upgrade head"
db_downgrade = "alembic downgrade -1"

dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "psycopg2>=2.9.8",
    "psycopg2-binary>=2.9.8",
    "sqlalchemy>=2.0.21",
    "alembic>=1.12.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "boto3>=1.28.63",
    "python-multipart>=0.0.6",
]
