[project]
name = "Yurback"
version = "0.3.0"
description = "Yurback is a backend for yurb.dev"
authors = [
    {name = "Yurb", email = "yavurb@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic-settings>=2.2.1",
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "boto3>=1.34.64",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.28.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
_.env_file = ".env"
start = "sh start.sh"
dev = "uvicorn src.main:app --host '0.0.0.0' {args:--port 8910} --reload"
tests = "pytest -vv"
tests_cov = "pytest --cov-report term-missing --cov=src"

# Alembic - migrations commands
db_revision = "alembic revision --autogenerate -m"
db_upgrade = "alembic upgrade head"
db_downgrade = "alembic downgrade -1"

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]